--- a/pms/timeline.html
+++ b/pms/timeline.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <title>MVP Implementation Timeline - Cardamom Processing Client</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,11 +28,18 @@
 
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
+        html {
+            width: 100%;
+            overflow-x: hidden;
+        }
+
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
             background: var(--bg);
             color: var(--text);
             line-height: 1.6;
+            width: 100%;
+            overflow-x: hidden;
         }
 
         .container {
@@ -143,9 +150,316 @@
             gap: 16px;
         }
 
+        /* Mobile Responsive Styles */
         @media (max-width: 900px) {
             .grid-2, .grid-3, .grid-4 {
                 grid-template-columns: 1fr;
+            }
+
+            .container {
+                padding: 20px 16px;
+            }
+
+            .header {
+                padding: 32px 20px;
+                border-radius: 12px;
+            }
+
+            .header h1 {
+                font-size: 1.5rem;
+            }
+
+            .header .subtitle {
+                font-size: 1rem;
+            }
+
+            h2 {
+                font-size: 1.3rem;
+                margin: 32px 0 16px;
+            }
+
+            .timeline-row {
+                flex-direction: column;
+                gap: 12px;
+            }
+
+            .timeline-phase {
+                padding: 12px;
+            }
+
+            .timeline-total {
+                flex-direction: column;
+                gap: 16px;
+                text-align: center;
+            }
+
+            .timeline-total > div {
+                text-align: center !important;
+            }
+
+            .phase-header {
+                flex-wrap: wrap;
+                padding: 16px;
+            }
+
+            .phase-duration {
+                width: 100%;
+                margin-left: 0;
+                margin-top: 8px;
+                text-align: center;
+            }
+
+            .phase-body {
+                padding: 0 16px 16px;
+            }
+
+            .module-section {
+                padding: 16px;
+            }
+
+            .week-box {
+                padding: 12px;
+            }
+
+            table {
+                font-size: 0.85rem;
+            }
+
+            table th, table td {
+                padding: 8px 6px;
+            }
+
+            .client-stats {
+                flex-wrap: wrap;
+                gap: 12px;
+            }
+
+            .client-stat {
+                flex: 1 1 calc(50% - 12px);
+                min-width: 120px;
+            }
+
+            .deliverable-grid {
+                grid-template-columns: 1fr;
+                gap: 12px;
+            }
+        }
+
+        @media (max-width: 600px) {
+            body {
+                min-width: 320px;
+            }
+
+            .container {
+                padding: 16px 12px;
+                width: 100%;
+            }
+
+            .header {
+                padding: 24px 16px;
+            }
+
+            .header h1 {
+                font-size: 1.3rem;
+            }
+
+            .header .subtitle {
+                font-size: 0.9rem;
+            }
+
+            h2 {
+                font-size: 1.2rem;
+            }
+
+            .timeline-summary {
+                padding: 20px 12px;
+            }
+
+            .timeline-phase {
+                padding: 10px;
+            }
+
+            .timeline-phase .name {
+                font-size: 0.8rem;
+            }
+
+            .timeline-phase .duration {
+                font-size: 1rem;
+            }
+
+            .timeline-total .mvp-total {
+                font-size: 1.2rem;
+            }
+
+            .phase-number {
+                width: 44px;
+                height: 44px;
+                font-size: 1.1rem;
+            }
+
+            .phase-info h3 {
+                font-size: 1rem;
+            }
+
+            .phase-info p {
+                font-size: 0.85rem;
+            }
+
+            .badge {
+                font-size: 0.75rem;
+                padding: 4px 10px;
+            }
+
+            .phase-body {
+                padding: 0 12px 12px;
+            }
+
+            .module-section {
+                padding: 12px;
+            }
+
+            table {
+                font-size: 0.75rem;
+            }
+
+            table th, table td {
+                padding: 6px 4px;
+            }
+
+            .client-stats {
+                flex-direction: column;
+            }
+
+            .client-stat {
+                flex: 1 1 100%;
+                min-width: auto;
+            }
+
+            .client-stat .number {
+                font-size: 1.3rem;
+            }
+
+            .client-box {
+                padding: 16px;
+            }
+
+            .week-box {
+                padding: 10px;
+            }
+
+            /* Override inline min-widths on very small screens */
+            [style*="min-width"] {
+                min-width: auto !important;
+            }
+
+            .process-box {
+                min-width: auto !important;
+            }
+
+            /* Ensure all elements respect viewport width */
+            * {
+                max-width: 100%;
+            }
+        }
+
+        /* Extra small devices (iPhone SE and similar) */
+        @media (max-width: 375px) {
+            .container {
+                padding: 12px 8px;
+            }
+
+            .header {
+                padding: 20px 12px;
+                border-radius: 8px;
+            }
+
+            .header h1 {
+                font-size: 1.2rem;
+                line-height: 1.3;
+            }
+
+            .header .subtitle {
+                font-size: 0.85rem;
+            }
+
+            .timeline-summary {
+                padding: 16px 10px;
+                border-radius: 12px;
+            }
+
+            .timeline-phase {
+                padding: 8px;
+            }
+
+            .phase-header {
+                padding: 12px;
+            }
+
+            .phase-body {
+                padding: 0 10px 10px;
+            }
+
+            .module-section {
+                padding: 10px;
+            }
+
+            .client-box {
+                padding: 12px;
+            }
+
+            table {
+                font-size: 0.7rem;
+            }
+
+            table th, table td {
+                padding: 4px 2px;
+            }
+
+            code {
+                font-size: 0.7rem;
+            }
+
+            .table-wrapper {
+                margin: 16px -8px;
+                padding: 0 8px;
+            }
+
+            .card {
+                border-radius: 8px;
+                padding: 12px;
+            }
+
+            h2 {
+                font-size: 1.1rem;
+            }
+
+            .header-badges {
+                gap: 6px;
+            }
+
+            .badge {
+                font-size: 0.7rem;
+                padding: 3px 8px;
+            }
+
+            /* Process flow for very small screens */
+            .process-flow {
+                flex-wrap: wrap;
+                gap: 8px;
+            }
+
+            .process-box {
+                min-width: auto !important;
+                padding: 10px 12px;
+                font-size: 0.8rem;
+            }
+
+            .process-box .type {
+                font-size: 0.65rem;
+            }
+
+            .process-arrow {
+                font-size: 1.2rem;
             }
         }
 
